tests/test_proof/bad/output/enums-empty.catala_en.Proof
[ERROR] [A.x] This variable might return an empty error:
  --> tests/test_proof/bad/enums-empty.catala_en
   | 
15 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
